Changing palette's colors, changing section's order

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <div class="wrapperMain">
       <header>
         <section class="brand">
-          <a href="#">LOGO</a>
+          <a href="#">
+            <img src="./assets/img/logo.svg" alt="Logo" />
+          </a>
         </section>
         <section class="menu">
           <label for="menuBotton">
@@ -39,24 +41,22 @@
             <nav class="menuContainer">
               <ul class="menuDropdown">
                 <li class="menuItem">
-                  <a class="menuLink" href="./index.php">HOME</a>
+                  <a class="menuLink" href="#">HOME</a>
                 </li>
                 <li class="menuItem">
-                  <a class="menuLink" href="./about.php">ABOUT US</a>
+                  <a class="menuLink" href="#about">ABOUT US</a>
                 </li>
                 <li class="menuItem">
-                  <a class="menuLink" href="./portfolio.php">PORTFOLIO</a>
+                  <a class="menuLink" href="#services">SERVICES</a>
                 </li>
                 <li class="menuItem">
-                  <a class="menuLink" href="./distribution.php">DISTRIBUTION</a>
+                  <a class="menuLink" href="#whyus">WHY US</a>
                 </li>
                 <li class="menuItem">
-                  <a class="menuLink" href="./network.php">NETWORK</a>
+                  <a class="menuLink" href="#faqs">FAQs</a>
                 </li>
                 <li class="menuItem">
-                  <a class="menuLink" href="./index.php#contactus"
-                    >CONTACT US</a
-                  >
+                  <a class="menuLink" href="#contact">CONTACT US</a>
                 </li>
               </ul>
             </nav>
@@ -112,11 +112,11 @@
           <div class="aboutDescription">
             <h2 class="title">About Us</h2>
             <p>
-              FrandOn is committed to maximizing the efficiency of your freight
-              management operations. Our network design engineers work with you
-              to set up your network for speed and flexibility by selecting and
-              analyzing facility locations and integrating them into your supply
-              chain.
+              Academy Trucking Corp is committed to maximizing the efficiency of
+              your freight management operations. Our network design engineers
+              work with you to set up your network for speed and flexibility by
+              selecting and analyzing facility locations and integrating them
+              into your supply chain.
             </p>
           </div>
           <div class="aboutImg">
@@ -155,13 +155,13 @@
                 <div class="back">
                   <h3>Our Solutions</h3>
                   <p>
-                    FrandoOn freight management solutions provide visibility and
-                    control over your network, create the most efficient routes
-                    to move product, and help you get the most from carriers.
-                    What makes FrandoOn different is our ability to focus on and
-                    affect the entire freight management process, including
-                    tactical planning and procurement, as well as accounting
-                    functionality.
+                    Academy Trucking Corp freight management solutions provide
+                    visibility and control over your network, create the most
+                    efficient routes to move product, and help you get the most
+                    from carriers. What makes Academy Trucking Corp different is
+                    our ability to focus on and affect the entire freight
+                    management process, including tactical planning and
+                    procurement, as well as accounting functionality.
                   </p>
                 </div>
               </div>
@@ -175,18 +175,50 @@
                 <div class="back">
                   <h3>Improve Your Rol</h3>
                   <p>
-                    By leveraging our full portfolio of transportation
-                    solutions, FrandoOn also evaluates mode selection, backhaul
-                    opportunities and consolidation prospects and allows us to
-                    create a customized solution for you. By consistently
-                    seeking out new ways to improve your supply chain and
-                    freight management operations, we can create a strong ROI by
-                    capitalizing on cost savings, cost avoidance and cost
-                    mitigation to build a continuous improvement strategy for
-                    the future.
+                    By leveraging our complete portfolio of transportation
+                    solutions, we also assess mode selection, backhaul
+                    opportunities, and consolidation prospects allowing us to
+                    create a solution tailored for you. By constantly looking
+                    for new ways to improve your supply chain and cargo
+                    management operations, we can create a return on investment
+                    by capitalizing on cost savings, avoidance and mitigation to
+                    build a continuous improvement strategy for the future.
                   </p>
                 </div>
               </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="whyusContainer wow" id="whyus">
+          <h2 class="title">Why Us</h2>
+          <div class="cardContainer">
+            <div class="cardGeneral cardwhyus">
+              <img src="./assets/img/expert.svg" alt="Expert Icon" />
+              <h3>Expert</h3>
+
+              <p>Our board off expert will assure you get only the best.</p>
+            </div>
+            <div class="cardGeneral cardwhyus">
+              <img src="./assets/img/risk.svg" alt="Risk Management Icon" />
+              <h3>Risk Management</h3>
+
+              <p>
+                Full peice of mind. We will find a best solution to keep your
+                freight safe.
+              </p>
+            </div>
+            <div class="cardGeneral cardwhyus">
+              <img src="./assets/img/budged.svg" alt="Budged Icon" />
+              <h3>Budged Control</h3>
+
+              <p>No surprises here! Clear pricing from day one.</p>
+            </div>
+            <div class="cardGeneral cardwhyus">
+              <img src="./assets/img/insurance.svg" alt="Insurance Icon" />
+              <h3>Insurance3</h3>
+
+              <p>We always have a backup plan, no loose ends.</p>
             </div>
           </div>
         </section>
@@ -248,45 +280,25 @@
             </p>
           </div>
         </section>
-        <section class="whyusContainer wow" id="whyus">
-          <h2 class="title">Why Us</h2>
-          <div class="cardContainer">
-            <div class="cardGeneral cardwhyus">
-              <img src="./assets/img/expert.svg" alt="Expert Icon" />
-              <h3>Expert</h3>
-
-              <p>Our board off expert will assure you get only the best.</p>
-            </div>
-            <div class="cardGeneral cardwhyus">
-              <img src="./assets/img/risk.svg" alt="Risk Management Icon" />
-              <h3>Risk Management</h3>
-
-              <p>
-                Full peice of mind. We will find a best solution to keep your
-                freight safe.
-              </p>
-            </div>
-            <div class="cardGeneral cardwhyus">
-              <img src="./assets/img/budged.svg" alt="Budged Icon" />
-              <h3>Budged Control</h3>
-
-              <p>No surprises here! Clear pricing from day one.</p>
-            </div>
-            <div class="cardGeneral cardwhyus">
-              <img src="./assets/img/insurance.svg" alt="Insurance Icon" />
-              <h3>Insurance3</h3>
-
-              <p>We always have a backup plan, no loose ends.</p>
-            </div>
+        <section class="miniCarousel">
+          <div class="carouselContent">
+            <article class="imgContainer">
+              <img src="./assets/img/mini-carousel-1.svg" alt="Icon" />
+            </article>
+            <article class="imgContainer">
+              <img src="./assets/img/mini-carousel-4.svg" alt="Icon" />
+            </article>
+            <article class="imgContainer">
+              <img src="./assets/img/mini-carousel-3.svg" alt="Icon" />
+            </article>
+            <article class="imgContainer">
+              <img src="./assets/img/mini-carousel-5.svg" alt="Icon" />
+            </article>
+            <article class="imgContainer">
+              <img src="./assets/img/mini-carousel-2.svg" alt="Icon" />
+            </article>
           </div>
         </section>
-        <!-- <section class="quotesContainer wow">
-          <p>
-            “We always have a back up plan, no loose ends. Full peace of mind,
-            we will find a best solutoin to keep your freight safe.”
-          </p>
-          <p>Frand On</p>
-        </section> -->
         <section class="contactContainer wow" id="contact">
           <div class="formContainer">
             <form action="registro.php" method="POST" id="form">
@@ -339,12 +351,10 @@
             </section>
           </div>
         </section>
-
-        <section class="benefitContainer wow"></section>
       </main>
       <footer class="wow">
         <div class="footerBrand">
-          <img src="./assets/img/Logo.svg" alt="Logo" />
+          <img src="./assets/img/logo.svg" alt="Logo" />
         </div>
         <section class="infoFooterContainer">
           <div class="addressContainer">
@@ -383,34 +393,27 @@
               <div>
                 <a href="https://www.facebook.com">
                   <img src="./assets/icon/facebook-f.svg" alt="Facebook Icon" />
-                  <p>Facebook</p>
                 </a>
               </div>
-            </section>
-            <section class="itemFooter">
+
               <div>
                 <a href="https://www.twitter.com">
                   <img src="./assets/icon/twitter.svg" alt="Twitter Icon" />
-                  <p>Twitter</p>
                 </a>
               </div>
-            </section>
-            <section class="itemFooter">
+
               <div>
                 <a href="https://www.linkedin.com">
                   <img
                     src="./assets/icon/linkedin-in.svg"
                     alt="Linkedin Icon"
                   />
-                  <p>Linkedin</p>
                 </a>
               </div>
-            </section>
-            <section class="itemFooter">
+
               <div>
                 <a href="https://www.youtube.com">
                   <img src="./assets/icon/youtube.svg" alt="Youtube Icon" />
-                  <p>Youtube</p>
                 </a>
               </div>
             </section>
