--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <header>
         <section class="brand">
           <a href="#">
-            <img src="./assets/img/logo.svg" alt="Logo" />
+            <img src="./assets/img/Logo.svg" alt="Logo" />
           </a>
         </section>
         <section class="menu">
@@ -354,7 +354,7 @@
       </main>
       <footer class="wow">
         <div class="footerBrand">
-          <img src="./assets/img/logo.svg" alt="Logo" />
+          <img src="./assets/img/Logo.svg" alt="Logo" />
         </div>
         <section class="infoFooterContainer">
           <div class="addressContainer">
