Adding form activity

--- a/index.html
+++ b/index.html
@@ -307,12 +307,21 @@
                 name="name"
                 id="name"
                 placeholder="First Name"
+                required
               />
               <input
                 type="location"
                 name="address"
                 id="address"
                 placeholder="Address"
+                required
+              />
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Email"
+                required
               />
               <input type="phone" name="phone" id="phone" placeholder="Phone" />
               <textarea
@@ -320,9 +329,11 @@
                 cols="30"
                 rows="10"
                 placeholder="Type Your Message"
+                required
               ></textarea>
               <button type="submit" class="button submit">Send</button>
             </form>
+            <a href="mailto:academiatrucking@gmail.com" id="mailto">MAIL</a>
           </div>
           <div class="instructionsContainer">
             <h2 class="title">Request a Free Quote</h2>
@@ -365,19 +376,19 @@
                   src="./assets/icon/map-marker-alt.svg"
                   alt="Location Icon"
                 />
-                <p>20 Street Name, Suite 151, Texas, United States</p>
+                <p>40 SW 13TH ST STE 901 MIAMI 33130</p>
               </div>
             </section>
             <section class="itemFooter">
               <div>
                 <img src="./assets/icon/phone-alt.svg" alt="Phone Icon" />
-                <p>111-222-3333</p>
+                <p>+1 954-505-6063</p>
               </div>
             </section>
             <section class="itemFooter">
               <div>
                 <img src="./assets/icon/mail-bulk.svg" alt="Mail Icon" />
-                <p>companyname@yourmail.com</p>
+                <p>academiatrucking@gmail.com</p>
               </div>
             </section>
             <section class="itemFooter">
@@ -420,7 +431,7 @@
           </div>
         </section>
         <div class="firmContainer">
-          <p>All Right Reserve</p>
+          <p>©2021 por Academia Trucking. | All Right Reserve</p>
         </div>
       </footer>
     </div>
