--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="descripcion de la pagia" />
+    <link
+      rel="shortcut icon"
+      href="./assets/icon/favicon.png"
+      type="image/x-icon"
+    />
+    <meta
+      name="description"
+      content="Academy Trucking Corp: Committed to maximizing the efficiency of your freight management operations. "
+    />
+    <meta
+      name="”Keywords”"
+      content="Truck, trucking, transporting, logistic,
+    company, transportation"
+    />
+    <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link
@@ -17,7 +31,7 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <title>ATC</title>
+    <title>Academia Trucking Corp</title>
   </head>
   <body>
     <div class="wrapperMain">
@@ -67,7 +81,11 @@
       <main>
         <section class="bannerContainer">
           <div class="titleContainer">
-            <h1>Transporting Logistic Moving.</h1>
+            <h1>
+              <span> Transporting. </span>
+              <span> Logistic. </span>
+              <span> Moving. </span>
+            </h1>
             <a href="#contact" class="btnContant">Contact Us</a>
           </div>
           <div class="sliderContainer">
